--- a/Docker/app/code/or-client.ini.sample
+++ b/Docker/app/code/or-client.ini.sample
@@ -2,8 +2,8 @@
 host = yourOR.DOMAIN.TLD
 port = YOUR_OR_MQTT_PORT
 ca_certs = relative_path_to_OR_ca_certs
-; certfile = certs/client/SYS_BRIDGE-R2P-OR.crt
-; keyfile = certs/client/SYS_BRIDGE-R2P-OR_NOPASS.key
+; certfile = relative_path_to_OR_certfile
+; keyfile = relative_path_to_OR_keyffile
 
 [openremote]
 client_id = SERVICE_USER_NAME
